making results more readable

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1 class="text-center">Twitch API Application</h1>
+			<h1 class="text-center" id="title"><strong>Twitch Streaming Status</strong></h1>
 			<div id="resultsBox">
 			</div>
 		</div>
