--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 			<div id="resultsBox">
 			</div>
 		</div>
+			<div class="row">
+				<footer class="bottom-footer"><p class="small text-center">Created by Matthew Dajani.</p></footer>
+			</div>
 		<script src="twitch.js"></script>	
 	</body>
 </html>
